--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,47 +49,49 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    compile 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    compile 'com.android.support:multidex:1.0.0'
+    implementation 'com.android.support:multidex:1.0.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.allenliu.versionchecklib:library:2.0.3'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'org.reactivestreams:reactive-streams:1.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.1'
-    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile('com.squareup.retrofit2:converter-simplexml:2.1.0') {
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.allenliu.versionchecklib:library:2.0.3'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'org.reactivestreams:reactive-streams:1.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation('com.squareup.retrofit2:converter-simplexml:2.1.0') {
         exclude group: 'xpp3', module: 'xpp3'
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'stax', module: 'stax'
     }
-    compile 'com.github.CB-ysx:CBRatingBar:2.0.1'
-    compile 'top.zibin:BottomDialog:1.0.1'
-    compile project(':swipelayout')
-    compile 'liji.library.dev:citypickerview:3.1.8'
+    implementation 'com.github.CB-ysx:CBRatingBar:2.0.1'
+    implementation 'top.zibin:BottomDialog:1.0.1'
+    implementation project(':swipelayout')
+    implementation 'liji.library.dev:citypickerview:3.1.8'
     implementation files('libs/alipaySdk-20180403.jar')
     implementation files('libs/mqtt-client-0_4_1-20140602_040113-100.jar')
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
-    compile 'com.j256.ormlite:ormlite-core:4.48'
-    compile 'com.github.hotchemi:permissionsdispatcher:2.3.1'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.j256.ormlite:ormlite-android:4.48'
+    implementation 'com.j256.ormlite:ormlite-core:4.48'
+    implementation 'com.github.hotchemi:permissionsdispatcher:2.3.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.3.1'
-    compile 'com.contrarywind:Android-PickerView:4.1.4'
-    compile files('libs/ocr-sdk.jar')
-    compile project(path: ':ocr_ui')
+    implementation 'com.contrarywind:Android-PickerView:4.1.4'
+    implementation files('libs/ocr-sdk.jar')
+    implementation project(path: ':ocr_ui')
     implementation files('libs/personalmqtt-20180814.jar')
-    compile 'com.lzy.widget:imagepicker:0.6.1'
-    implementation files('libs/mdp_sdk.jar')
+    implementation 'com.lzy.widget:imagepicker:0.6.1'
+    compile files('libs/mdp_sdk.jar')
+    implementation 'com.google.zxing:core:3.3.0'
+
 }
