--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,14 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.signConfig
         }
         debug{
             minifyEnabled false
-            signingConfig signingConfigs.signConfig // 配置debug包的签名
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+           // signingConfig signingConfigs.signConfig // 配置debug包的签名
         }
     }
     repositories {
@@ -66,7 +67,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.allenliu.versionchecklib:library:2.0.3'
+    compile 'com.allenliu.versionchecklib:library:2.0.3'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'org.reactivestreams:reactive-streams:1.0.0'
